remmina (1.0.0-1) UNRELEASED; urgency=low

  * New upstream release.
  * debian/patches/REMMINA_COMMAND_NONE.patch:
    - Refresh for new upstream release.
  * debian/control:
    - Refresh build-dependencies to match new structure.
  * debian/copyright:
    - Refresh copyright information.
  * debian/watch:
    - Adjust watch file to match new download location.

 -- Luca Falavigna <dktrkranz@debian.org>  Fri, 10 Feb 2012 22:05:06 +0100

remmina (0.9.3-3) unstable; urgency=low

  * debian/patches/REMMINA_COMMAND_NONE.patch:
    - Adjust REMMINA_COMMAND_NONE value to match libunique command ID
      to avoid launching a second instance when an existing remmina
      process is already running (Closes: #640291).
  * debian/control:
    - 0.9 series replaces remmina-gnome and remmina-xfce packages, which
      have been removed from Debian. Add Replaces field to handle removal
      of the obsolete packages (Closes: #616289).
    - Bump Standards-Version to 3.9.2, no changes required.
  * debian/copyright:
    - Use DEP-5 syntax.

 -- Luca Falavigna <dktrkranz@debian.org>  Sat, 01 Oct 2011 23:25:51 +0200

remmina (0.9.3-2) unstable; urgency=low

  * Upload to unstable.
  * debian/copyright:
    - Update copyright years.

 -- Luca Falavigna <dktrkranz@debian.org>  Sun, 06 Feb 2011 19:05:31 +0100

remmina (0.9.3-1) experimental; urgency=low

  * New upstream bugfix release.
  * debian/control:
    - Add Breaks: remmina-plugin-data (<= 0.9) field to make sure plugins
      are compatible with current version (Closes: #610443).

 -- Luca Falavigna <dktrkranz@debian.org>  Sat, 22 Jan 2011 14:36:56 +0100

remmina (0.9.2-1) experimental; urgency=low

  * New upstream bugfix release.
  * debian/control:
    - Remove transitional grdc package, now obsolete.

 -- Luca Falavigna <dktrkranz@debian.org>  Tue, 28 Dec 2010 12:05:08 +0100

remmina (0.9.0-1) experimental; urgency=low

  * New upstream release.
    - Quick connect menu removed and consolidated with Connection -> New;