@@ -3,9 +3,5 @@
 %:
 	dh $@
 
-override_dh_clean:
-	dh_clean po/POTFILES.skip
-
-override_dh_auto_build:
-	echo "libvncserver/libvncclient/minilzo.c" > po/POTFILES.skip
-	dh_auto_build
+override_dh_auto_configure:
+	dh_auto_configure -- -DWITH_APPINDICATOR=OFF
