@@ -7,10 +7,12 @@ remmina (1.0.0-1) UNRELEASED; urgency=low
     - Refresh build-dependencies to match new structure.
   * debian/copyright:
     - Refresh copyright information.
+  * debian/rules:
+    - Compile with -DWITH_APPINDICATOR=OFF.
   * debian/watch:
     - Adjust watch file to match new download location.
 
- -- Luca Falavigna <dktrkranz@debian.org>  Fri, 10 Feb 2012 22:05:06 +0100
+ -- Luca Falavigna <dktrkranz@debian.org>  Fri, 10 Feb 2012 22:06:04 +0100
 
 remmina (0.9.3-3) unstable; urgency=low
 
